Agregado a la documentacion el resto de los endpoints
