# handlers/adding_products.go
@@ -5,8 +5,15 @@ import (
 	"github.com/cap-diego/microservices/data"
 )
 
-// AddProduct http handler of post
-func (prods *Products) AddProduct(rw http.ResponseWriter, req *http.Request) {
+//swager:route POST /products products createProduct
+//
+// responses:
+//	200: productResponse
+//	422: errorValidation
+//	501: errorResponse
+
+// Create handles post request for creating a new product
+func (prods *Products) Create(rw http.ResponseWriter, req *http.Request) {
 	newProd := req.Context().Value(KeyProduct{}).(data.Product)
 	data.AddProduct(&newProd)
 }
