# handlers/products.go
@@ -19,71 +19,55 @@ import (
 	"log"
 	"fmt"
 	"net/http"
-	"context"
+	"strconv"
+	"github.com/gorilla/mux"
 )
-
-// A list of products returns in the response
-// swagger:response productsResponse
-type productsResponseWrapper struct {
-	// All products in the system 
-	// in: body
-	Body []data.Products
-}
-
-// swagger:parameters deleteProduct
-type productIDParameterWrapper struct {
-	// The id of the product to delete from the database
-	// in: path
-	// required: true
-	ID int `json:"id"`
-}
-
-// swagger:response noContent
-type productsNoContent struct {
-}
-
-// Products rest resource, implements ServeHTTP
-type Products struct {
-	l *log.Logger
-}
 
 // KeyProduct used for request.context 
 type KeyProduct struct{}
 
-// NewProducts rest resource for products
-func NewProducts(l *log.Logger) *Products {
-	return &Products{l}
+// Products rest resource, implements ServeHTTP
+type Products struct {
+	l *log.Logger
+	v *data.Validation
 }
 
-//MiddlewareProductValidation Validate body of request and save product to context if valid
-func (prods Products) MiddlewareProductValidation(next http.Handler) http.Handler {
-	f := func(rw http.ResponseWriter, req *http.Request) {
-		prod := data.Product{}
-		err := prod.FromJSON(req.Body)
-		if err != nil {
-			prods.l.Println("[ERROR] desarializing product",err)
-			http.Error(rw, "Error reading product", http.StatusBadRequest)
-			return
-		}
+// NewProducts rest resource for products
+// func NewProducts(l *log.Logger) *Products {
+// 	return &Products{l}
+// }
 
-		// Validate products
+// ErrInvalidProductPath is an error message when the product path is not valid
+var ErrInvalidProductPath = fmt.Errorf("Invalid Path, path should be /products/[id]")
 
-		err = prod.Validate()
-		if err != nil {
-			prods.l.Println("[ERROR] validating product", err)
-			http.Error(
-				rw, 
-				fmt.Sprintf("Error validating product: %s", err),
-				http.StatusBadRequest)
-			return			
-		}
+// GenericError is a generic error message returned by a server
+type GenericError struct {
+	Message string `json:"message"`
+}
 
-		// Add product to the context 
-		ctx := context.WithValue(req.Context(), KeyProduct{}, prod)
-		req = req.WithContext(ctx)
-		prods.l.Printf("CONTEXTO %#v", ctx)
-		// Call the next handler 
-		next.ServeHTTP(rw, req)
+// NewProducts returns a new products handler with the given logger
+func NewProducts(l *log.Logger, v *data.Validation) *Products {
+	return &Products{l, v}
+}
+// ValidationError is a collection of validation error messages
+type ValidationError struct {
+	Messages []string `json:"messages"`
+}
+
+// getProductID returns the product ID from the URL
+// Panics if cannot convert the id into an integer
+// this should never happen as the router ensures that
+// this is a valid number
+func getProductID(r *http.Request) int {
+	// parse the product id from the url
+	vars := mux.Vars(r)
+
+	// convert the id into an integer and return
+	id, err := strconv.Atoi(vars["id"])
+	if err != nil {
+		// should never happen
+		panic(err)
 	}
-	return http.HandlerFunc(f)
+
+	return id
 }
